# OnlineVoting

./: README.md  pyproject.toml
ChatBot/: app.py  requirements.txt
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: LoginPage.jsx  Navbar.jsx  OrganizedEvents.jsx  ParticipatedMember.jsx  ProtectedRoute.jsx  RegisterPage.jsx  VotingManifesto.jsx  orgCreations.jsx
frontend/src/pages/: Chatbot.jsx  DiscussionPage.jsx  Home.jsx
frontend/src/styles/: BasicForm.css  Chatbot.css  Counting.css  Discussion.css  Home.css  MemberManifesto.css  OrgCreation.css  OrganizedList.css  ParticipatedMember.css  RegisterForm.css
tutor/: main.py
voting/: db.sqlite3  main.py  requirement.txt
voting/exercise/: admin.py  models.py  serializers.py  views.py
voting/exercise/migrations/: 0001_initial.py  0002_alter_reply_date.py
voting/home/: admin.py  models.py  serializers.py  views.py
voting/home/migrations/: 0001_initial.py  0002_organization_members.py  0003_remove_organization_duration.py  0004_vote.py  0005_members_photo_membersmanifestos.py  0006_remove_members_photo_membersmanifestos_photo.py  0007_membersvote_delete_vote.py  0008_remove_membersvote_voted_voterlist.py  0009_alter_membersvote_votes.py  0010_alter_voterlist_email.py  0011_alter_members_email.py
voting/voting/: settings.py  urls.py
