[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.4",
    "djangorestframework-simplejwt>=5.3.1",
    "djangorestframework>=3.15.2",
    "python-dotenv>=1.0.1",
    "django-cors-headers>=4.6.0",
    "django-filter>=24.3",
    "pillow>=11.0.0",
    "streamlit>=1.41.0",
    "pypdf2>=3.0.1",
    "longchain>=0.4.2",
    "faiss-cpu>=1.9.0.post1",
    "openai>=1.57.3",
    "huggingface-hub>=0.26.5",
    "langchain>=0.3.11",
    "instructorembedding>=1.0.1",
    "langchain-community>=0.3.11",
    "transformers>=4.47.0",
    "accelerate>=1.2.0",
    "django-import-export>=4.3.3",
    "django-unfold>=0.43.0",
    "pdfplumber>=0.11.4",
    "langchain-openai>=0.2.12",
]
